--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
+    <header class="header">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
@@ -45,17 +45,15 @@
           </div>
         </div>
       </div>
-    </div>
+    </header>
 
-    <div class="container">
-    <div ng-view=""></div>
-    </div>
-
-    <div class="footer">
+    <main class="main">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+      <div ng-view=""></div>
       </div>
-    </div>
+    </main>
+
+    <footer class="footer"></footer>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
