--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/services/transactions-service.js"></script>
     <script src="scripts/controllers/wallet-controller.js"></script>
     <!-- endbuild -->
 </body>
