--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/ng-currency/dist/ng-currency.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
