--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <header class="header">
+    <header class="header" ng-controller="HeaderCtrl">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
@@ -38,9 +38,9 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="active"><a href="/">Home</a></li>
+              <li><a ng-href="#" ng-click="reset(); $event.preventDefault()">Reset</a></li>
+              <li><a ng-href="">View Source</a></li>
             </ul>
           </div>
         </div>
@@ -83,6 +83,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/services/transactions-service.js"></script>
+    <script src="scripts/controllers/header-controller.js"></script>
     <script src="scripts/controllers/wallet-controller.js"></script>
     <!-- endbuild -->
 </body>
