--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
     <script src="scripts/services/transactions-service.js"></script>
     <script src="scripts/controllers/header-controller.js"></script>
     <script src="scripts/controllers/wallet-controller.js"></script>
+    <script src="scripts/directives/select-on-focus.js"></script>
     <!-- endbuild -->
 </body>
 </html>
