--- a/app/index.html
+++ b/app/index.html
@@ -19,39 +19,42 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <header class="header" ng-controller="HeaderCtrl">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+    <div class="page">
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+      <header class="header" ng-controller="HeaderCtrl">
+        <div class="navbar navbar-default" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
 
-            <a class="navbar-brand" href="/">WorkAngel Wallet App</a>
-          </div>
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+              <a class="navbar-brand" href="/">WorkAngel Wallet App</a>
+            </div>
 
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="/">Home</a></li>
-              <li><a ng-href="#" ng-click="reset(); $event.preventDefault()">Reset</a></li>
-              <li><a ng-href="">View Source</a></li>
-            </ul>
+            <div class="collapse navbar-collapse" id="js-navbar-collapse">
+
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a ng-href="#" ng-click="reset(); $event.preventDefault()">Reset</a></li>
+                <li><a ng-href="">View Source</a></li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-    </header>
+      </header>
 
-    <main class="main">
-      <div class="container">
-      <div ng-view=""></div>
-      </div>
-    </main>
+      <main class="main">
+        <div class="container">
+        <div ng-view=""></div>
+        </div>
+      </main>
+
+    </div>
 
     <footer class="footer"></footer>
 
