--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
                 <li><a ng-href="#" ng-click="reset(); $event.preventDefault()">Reset</a></li>
-                <li><a ng-href="https://github.com/humancatfood/work-angel">View Source</a></li>
+                <li><a href="https://github.com/humancatfood/work-angel">View Source</a></li>
               </ul>
             </div>
           </div>
