[+] added easter-egg

--- a/app/index.html
+++ b/app/index.html
@@ -58,16 +58,25 @@
 
     <footer class="footer"></footer>
 
+    <div class="modal fade easter-egg" id="easter-egg-modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img src="https://s-media-cache-ak0.pinimg.com/originals/9c/05/2a/9c052a887cc81ca6297c49c08af8438e.gif" alt="Hail Satan">
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
+      (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
+      r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
+      }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
+      ga('create', 'UA-61526365-1', 'http://humancatfood.github.io/work-angel');
+      ga('send', 'pageview', 'work-angel');
     </script>
 
     <!-- build:js(.) scripts/vendor.js -->
