--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
               <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
+                <li class="active"><a href="http://humancatfood.github.io/work-angel">Home</a></li>
                 <li><a ng-href="#" ng-click="reset(); $event.preventDefault()">Reset</a></li>
                 <li><a href="https://github.com/humancatfood/work-angel" target="_blank">View Source</a></li>
               </ul>
